HeaderBanner: - fixed height
FeaturedProduct:
- created data for this section
- completed creating this section with transition nad hover effect

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 @layer base {
     body {
         font-family: 'Roboto', sans-serif;
-        padding: 20px;
+        padding: 0;
         margin: 0;
     }
 }
