--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Prata&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
-@import "./apply/navLink.css";
-@import "./apply/tab.css";
+@import "styles/navLink.css";
+@import "styles/tab.css";
 
 @tailwind base;
 @tailwind components;
