created main api.js created NotFound page, still need to add content created AboutUs page, still need to update styles and extract data from API

--- a/src/index.css
+++ b/src/index.css
@@ -36,4 +36,9 @@
         left: -2rem;
         padding-right: 2rem;
     }
+
+    /*.wp-block-group-is-layout-constrained > div {
+        display: flex;
+        flex-direction: row;
+    }*/
 }
